# rentomatic

./: .flake8  cli.py  pyproject.toml
application/: app.py  config.py
rentomatic/serializers/: room.py
tests/domain/: test_room.py
tests/serializers/: test_room.py
