[tool.black]
line-length = 75
target-version = ['py37']

[tool.poetry]
name = "rentomatic"
version = "0.1.0"
description = "Rentomatic example from Clean Architectures in Python book."
authors = ["Benjamin Crews <aceF22@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
